--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
     // LAYER DEFINITION
     // OpenStreetMap (PETA JALAN) sebagai layer utama
     const streetLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { 
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' 
+        attribution: '<a href="https://tiktok.com/lonaliakbar">@lonaliakbar</a>' 
     });
     const satelliteLayer = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', { 
         attribution: 'Esri, DigitalGlobe, GeoEye, Earthstar Geographics, CNES/Airbus DS, USDA, USGS, AeroGRID, IGN, and the GIS User Community' 
     });
     const darkLayer = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', { 
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>' 
+        attribution: '<a href="https://tiktok.com/lonaliakbar">@lonaliakbar</a><a href="https://carto.com/attributions">CARTO</a>' 
     });
 
     let currentLang = 'ace';
