--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     let currentLang = 'ace';
     let userMarker;
     const translations = {
-        ace: { title: "TITEK APUI <span>MONITOR</span>", region: "WILAYAH PANTAUAN", sat: "SENSOR SATELIT", refresh: "PEUBARÔ DATA", detail: "DETAIL LOKASI", loc: "Mita Alamat...", temp: "Suum", energy: "Energi", time: "Waktèe", sat_lbl: "Satelit" },
+        ace: { title: "TITEK APUI <span>MONITOR</span>", region: "WILAYAH PANTAUAN", sat: "SENSOR SATELIT", refresh: "SEUBARÔ DATA", detail: "DEUTAIL LOKASI", loc: "Mita Alamat...", temp: "Suum", energy: "Energi", time: "Watèe", sat_lbl: "Sateulit" },
         id: { title: "MONITORING <span>TITIK API</span>", region: "WILAYAH PANTAUAN", sat: "SENSOR SATELIT", refresh: "PERBARUI DATA", detail: "DETAIL LOKASI", loc: "Mencari Lokasi...", temp: "Suhu", energy: "Energi", time: "Waktu", sat_lbl: "Satelit" },
         en: { title: "HOTSPOT <span>MONITORING</span>", region: "REGION", sat: "SATELLITE", refresh: "REFRESH DATA", detail: "LOCATION DETAIL", loc: "Locating...", temp: "Temp", energy: "Energy", time: "Time", sat_lbl: "Satellite" }
     };
